# Computacion-paralela

./: README.md
Parcial/: CMakeCache.txt  CMakeLists.txt  Makefile  MultiplicacionMPI  MultiplicacionMPI.cpp  MultiplicacionOpenMP  MultiplicacionOpenMP.cpp  MultiplicacionSecuencial  MultiplicacionSecuencial.cpp  Run.mk  cmake_install.cmake  times.txt
Parcial/Cuda/: CMakeLists.txt  MultiplicacionCuda.cu
Practicas/: CMakeCache.txt  CMakeLists.txt  DifuminadoMPI  DifuminadoMPI.cpp  DifuminadoOpenMP  DifuminadoOpenMP.cpp  DifuminadoSecuencial  DifuminadoSecuencial.cpp  Makefile  Run.mk  cmake_install.cmake  times.txt
Practicas/Cuda/: CMakeLists.txt  Difuminado.cu
