cmake_minimum_required(VERSION 3.0.0)

project( MultiplicacionMatricial )
find_package( OpenMP REQUIRED )
find_package( MPI REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( SYSTEM ${MPI_INCLUDE_PATH} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")

add_executable( MultiplicacionSecuencial MultiplicacionSecuencial.cpp )
add_executable( MultiplicacionOpenMP MultiplicacionOpenMP.cpp )
add_executable( MultiplicacionMPI MultiplicacionMPI.cpp )
target_link_libraries( MultiplicacionSecuencial )
target_link_libraries( MultiplicacionOpenMP ${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} )
target_link_libraries( MultiplicacionMPI MPI::MPI_CXX )