cmake_minimum_required(VERSION 2.8)
project( Difuminado )
enable_language(CUDA)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${CUDA_INCLUDE_DIRS} )
add_executable( Difuminado Difuminado.cu )
target_link_libraries( Difuminado ${OpenCV_LIBS} ${CUDA_LIBS})